# infolens

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  PRIVACY.md  README.md  infolens-v0.5.crx  pyproject.toml  results_bing.json  search_comparison.json  search_results.json  settings.py
--standalone/: scrapy.cfg
--standalone/infolens_spider/: items.py  middlewares.py  pipelines.py  settings.py
data/.infolens/: infolens.db
docs/: FIELDS.md  USAGE.md
infolens-cloudflare/: package-lock.json  package.json  tsconfig.json  wrangler.toml
infolens-cloudflare/db/: schema.sql  seed.sql
infolens-cloudflare/src/: worker.ts
infolens-extension/: manifest-firefox.json  manifest.json
infolens-extension/_locales/zh_CN/: messages.json
infolens-extension/src/background/: service-worker.js
infolens-extension/src/content/: injector.js  style.css
infolens-extension/src/popup/: popup.html
infolens-extension/src/shared/: i18n.js  store.js
scripts/: cron_fetch.py
spiders/: search.py
src/infolens/: __init__.py  __main__.py  api.py  compare.py  consensus.py  database.py  default_sources.py  filter.py  ingester.py  models.py  web.html
