[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "infolens"
version = "0.1.0"
description = "个人信息过滤系统 — 信源透明、交叉验证、偏见可见"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[tool.setuptools]
packages = ["infolens"]
